--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kilometervergoeding – Filou Oostende</title>
   <style>
-    :root { --bg:#f6f7fb; --fg:#111; --muted:#666; --card:#fff; --line:#e5e7eb; --brand:#f5c400; }
+    :root { --bg:#f6f7fb; --fg:#111; --muted:#666; --card:#fff; --line:#e5e7eb; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:var(--bg); color:var(--fg); margin:0; }
     .wrap { max-width: 760px; margin: 32px auto; padding: 0 20px; }
     .card { background:var(--card); border:1px solid var(--line); border-radius:16px; padding:24px; box-shadow: 0 4px 14px rgba(0,0,0,.04); }
@@ -20,8 +20,6 @@
     .actions { display:flex; gap:12px; margin-top: 16px; flex-wrap: wrap; }
     .btn { background:#111; color:#fff; border:none; border-radius:10px; padding:10px 14px; font-weight:700; cursor:pointer; text-decoration:none; text-align:center; }
     .btn-outline { background:#fff; color:#111; border:1px solid var(--line); }
-    .ok { padding:12px; border-radius:10px; background:#eaf8ed; border:1px solid #bfe7c5; margin:16px 0; display:none; }
-    .err{ padding:12px; border-radius:10px; background:#fde8e8; border:1px solid #f5b5b5; margin:16px 0; display:none; }
     table { width:100%; border-collapse: collapse; }
     th, td { padding:10px; border-top:1px solid var(--line); text-align:left; }
     th { background:#fafafa; }
@@ -41,15 +39,27 @@
 
       <p class="muted">Vul de gegevens in. De aanvraag wordt verstuurd naar de secretaris voor validatie.</p>
 
-      <div id="ok" class="ok">✅ Aanvraag verstuurd. Je kan het centrale archief openen of hieronder je lokale archief bekijken.</div>
-      <div id="err" class="err">⚠️ Verzenden mislukt. Probeer opnieuw of gebruik “Open formulier in nieuw tabblad”.</div>
-
       <form id="ritForm" target="_blank" method="post" action="https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec">
         <label for="datum">Datum verplaatsing</label>
         <input id="datum" name="rit_datum" type="date" required />
 
-        <label for="afstand">Afstand (km)</label>
-        <input id="afstand" name="afstand_km" type="number" step="0.1" min="0" required />
+        <div class="row">
+          <div>
+            <label for="afstand">Afstand (km)</label>
+            <input id="afstand" name="afstand_km" type="number" step="0.1" min="0" required />
+          </div>
+          <div>
+            <label for="ploeg">Ploeg</label>
+            <select id="ploeg" name="ploeg" required>
+              <option>U21</option>
+              <option>U18</option>
+              <option>U16</option>
+              <option>U14</option>
+              <option>Dames</option>
+              <option>N/A</option>
+            </select>
+          </div>
+        </div>
 
         <label for="bestemming">Bestemming</label>
         <input id="bestemming" name="bestemming" type="text" placeholder="bv. Oostkamp Sporthal" required />
@@ -68,22 +78,24 @@
           </div>
         </div>
 
+        <label for="email">E-mail aanvrager (voor bevestiging)</label>
+        <input id="email" name="gebruiker_email" type="email" placeholder="naam@club.be" />
+
         <!-- VASTE ONTVANGER -->
         <input type="hidden" name="valideerder_email" value="secretaris@filou-oostende.be" />
 
         <div class="actions">
-          <button id="sendBtn" class="btn" type="submit">Verstuur</button>
-          <a id="openNew" class="btn btn-outline" href="https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec?action=new" target="_blank" rel="noopener">Open formulier in nieuw tabblad</a>
-          <a id="openDash" class="btn btn-outline" href="https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec?action=dashboard" target="_blank" rel="noopener">Open centraal archief (dashboard)</a>
+          <button class="btn" type="submit">Verstuur (opent bevestiging)</button>
+          <a class="btn btn-outline" href="https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec?action=dashboard" target="_blank" rel="noopener">Open centraal archief (dashboard)</a>
         </div>
       </form>
 
-      <div class="archief" style="margin-top:24px">
+      <div style="margin-top:24px">
         <h2>Archief (lokaal op dit toestel)</h2>
         <p class="muted">Hier zie je je eigen laatste aanvragen die vanaf dit toestel verstuurd zijn.</p>
         <table>
           <thead>
-            <tr><th>Datum</th><th>Bestemming</th><th>Reden</th><th>Coach</th><th>Afstand</th></tr>
+            <tr><th>Ingediend</th><th>Bestemming</th><th>Ploeg</th><th>Reden</th><th>Coach</th><th>Afstand</th></tr>
           </thead>
           <tbody id="archiefBody"></tbody>
         </table>
@@ -92,28 +104,27 @@
   </div>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec";
+    // Voorvul datum met vandaag
+    (function(){
+      const d = new Date();
+      const yyyy = d.getFullYear();
+      const mm = String(d.getMonth()+1).padStart(2,'0');
+      const dd = String(d.getDate()).padStart(2,'0');
+      document.getElementById('datum').value = `${yyyy}-${mm}-${dd}`;
+    })();
 
-    // Voorvul datum met vandaag (lokale tijd)
-    const d = new Date();
-    const yyyy = d.getFullYear();
-    const mm = String(d.getMonth()+1).padStart(2,'0');
-    const dd = String(d.getDate()).padStart(2,'0');
-    document.getElementById('datum').value = `${yyyy}-${mm}-${dd}`;
-
-    const form   = document.getElementById('ritForm');
-    const okBox  = document.getElementById('ok');
-    const errBox = document.getElementById('err');
+    // Lokaal archief (zonder tegenhouden van submit)
+    const form = document.getElementById('ritForm');
+    const KEY = "filou_archief";
     const archTbody = document.getElementById('archiefBody');
 
-    // Lokaal archief helpers
-    const KEY = "filou_archief";
     function loadArchief(){
       const rows = JSON.parse(localStorage.getItem(KEY) || "[]");
       archTbody.innerHTML = rows.map(r => `
         <tr>
           <td>${new Date(r.ts).toLocaleString()}</td>
           <td>${r.bestemming}</td>
+          <td>${r.ploeg}</td>
           <td>${r.reden}</td>
           <td>${r.coach_naam}</td>
           <td>${Number(r.afstand_km).toFixed(1)} km</td>
@@ -128,36 +139,19 @@
     }
     loadArchief();
 
-    // Versturen via fetch (blijft op pagina). Fallback naar native submit.
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener('submit', () => {
       const payload = {
         rit_datum: form.rit_datum.value,
         afstand_km: form.afstand_km.value,
         bestemming: form.bestemming.value,
+        ploeg: form.ploeg.value,
         reden: form.reden.value,
         coach_naam: form.coach_naam.value,
-        valideerder_email: "secretaris@filou-oostende.be",
+        gebruiker_email: form.gebruiker_email.value,
         ts: Date.now()
       };
       saveArchief(payload);
-
-      try {
-        e.preventDefault();
-        errBox.style.display = 'none';
-        okBox.style.display  = 'none';
-
-        await fetch(SCRIPT_URL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8' },
-          body: new URLSearchParams(payload).toString(),
-          mode: 'no-cors'
-        });
-        okBox.style.display = 'block';
-      } catch(err) {
-        okBox.style.display = 'none';
-        errBox.style.display = 'block';
-        setTimeout(() => form.submit(), 50);
-      }
+      // Geen preventDefault → echte POST naar Google; je ziet meteen de bevestigingspagina.
     });
   </script>
 </body>
