--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 
         <div class="row">
           <div>
-            <label for="afstand">Afstand (km)</label>
+            <label for="afstand">Afstand (km, heen en terug)</label>
             <input id="afstand" name="afstand_km" type="number" step="0.1" min="0" required />
+            <div class="muted" style="font-size:12px;margin-top:4px">Vul de totale kilometers in (heen + terug).</div>
           </div>
           <div>
             <label for="ploeg">Ploeg</label>
