--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     .badge { display:inline-block; padding:6px 10px; border-radius:999px; border:1px solid var(--line); background:#fff; font-weight:600; font-size:13px; }
     .badge b { color:#0a7a0a; }
     label { display:block; margin: 12px 0 6px; font-weight: 600; }
-    input, select, button, a.btn { width:100%; padding:12px 14px; border:1px solid var(--line); border-radius:12px; font-size:16px; background:#fff; }
+    input, select, button { width:100%; padding:12px 14px; border:1px solid var(--line); border-radius:12px; font-size:16px; background:#fff; }
     input:focus, select:focus { outline:none; border-color:#b9c2cf; box-shadow:0 0 0 4px rgba(41,112,255,.08); }
     .row { display:grid; grid-template-columns:1fr 1fr; gap:12px; }
     .actions { display:flex; gap:12px; margin-top: 18px; flex-wrap: wrap; }
-    .btn { display:inline-block; background:#111; color:#fff; border:none; text-align:center; text-decoration:none; font-weight:700; }
-    .btn-outline { background:#fff; color:#111; border:1px solid var(--line); font-weight:600; }
+    .btn { display:inline-block; background:#111; color:#fff; border:none; text-align:center; text-decoration:none; font-weight:700; padding:12px 14px; border-radius:12px; }
     table { width:100%; border-collapse: collapse; }
     th, td { padding:10px; border-top:1px solid var(--line); text-align:left; }
     th { background:#fafafa; }
@@ -103,8 +102,8 @@
 
         <div class="actions">
           <button class="btn" type="submit">Verstuur (opent bevestiging)</button>
-          <a class="btn btn-outline" href="https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec?action=dashboard" target="_blank" rel="noopener">Open centraal archief (dashboard)</a>
         </div>
+        <p class="muted" style="margin-top:8px">Het centraal archief is alleen toegankelijk voor valideerder/betaler.</p>
       </form>
 
       <div style="margin-top:26px">
