--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kilometervergoeding – Filou Oostende</title>
+  <meta name="description" content="Aanvraagformulier kilometervergoeding Filou Oostende" />
   <style>
-    :root { --bg:#f6f7fb; --fg:#111; --muted:#666; --card:#fff; --line:#e5e7eb; --brand:#d90000; }
+    :root { --bg:#f6f7fb; --fg:#111; --muted:#666; --card:#fff; --line:#e5e7eb; }
+    html,body { height:100%; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:var(--bg); color:var(--fg); margin:0; }
-    .wrap { max-width: 880px; margin: 36px auto; padding: 0 20px; }
+    .wrap { max-width: 900px; margin: 36px auto; padding: 0 20px; }
     .card { background:var(--card); border:1px solid var(--line); border-radius:18px; padding:24px; box-shadow: 0 8px 24px rgba(0,0,0,.06); position:relative; overflow:hidden; }
     header.card-head { display:flex; align-items:center; justify-content:space-between; gap:16px; margin-bottom: 8px; }
     .brand-block { display:flex; flex-direction:column; gap:6px; }
-    h1 { font-size: 26px; margin:0; line-height:1.15; }
+    h1 { font-size: 26px; margin:0; line-height:1.2; }
     .muted { color:var(--muted); font-size:14px; }
-    .logo-right img { height: 110px; width:auto; display:block; filter: drop-shadow(0 2px 6px rgba(0,0,0,.1)); }
-    .road { position: relative; height: 24px; margin: 10px 0 18px; }
+    .logo-right img { height: 120px; width:auto; display:block; filter: drop-shadow(0 2px 6px rgba(0,0,0,.12)); }
+    .road { position: relative; height: 24px; margin: 12px 0 18px; }
     .road:before { content:""; position:absolute; left:0; right:0; top:12px; height:2px; border-top:2px dashed #c7ccd6; }
     .car { position: absolute; top:-6px; left:-32px; font-size:22px; animation: drive 6s linear infinite; }
     @keyframes drive { from { transform: translateX(0); } to { transform: translateX(100%); } }
@@ -30,11 +32,9 @@
     th, td { padding:10px; border-top:1px solid var(--line); text-align:left; }
     th { background:#fafafa; }
     .hint { font-size:12px; color:var(--muted); margin-top:4px }
-    @media (max-width:720px){
-      .row{ grid-template-columns:1fr; }
-      .logo-right img{ height:80px; }
-      h1{ font-size:22px; }
-    }
+    details { margin-top: 10px; }
+    summary { cursor:pointer; user-select:none; padding:6px 0; }
+    @media (max-width:720px){ .row{ grid-template-columns:1fr; } .logo-right img{ height:90px; } h1{ font-size:22px; } }
   </style>
 </head>
 <body>
@@ -55,15 +55,16 @@
         <div class="car">🚗💨</div>
       </div>
 
-      <form id="ritForm" target="_blank" method="post" action="https://script.google.com/macros/s/AKfycbxYBryZ2_ydKhTZB2Xrz4QrHuEGSpEgqDGIxAAhOMdn/exec" aria-label="Formulier kilometervergoeding">
+      <!-- Belangrijk: de action hieronder MOET je PUBLIC /exec URL zijn -->
+      <form id="ritForm" method="post" action="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec" aria-label="Formulier kilometervergoeding">
         <label for="datum">Datum verplaatsing</label>
         <input id="datum" name="rit_datum" type="date" required />
 
         <div class="row">
           <div>
             <label for="afstand">Afstand (km, heen en terug)</label>
-            <input id="afstand" name="afstand_km" type="number" step="0.1" min="0" required />
-            <div class="hint">Vul de totale kilometers in (heen + terug).</div>
+            <input id="afstand" name="afstand_km" type="number" step="0.01" min="0" inputmode="decimal" required />
+            <div class="hint">Vul de totale kilometers in (heen + terug). Komma of punt mag.</div>
           </div>
           <div>
             <label for="ploeg">Ploeg</label>
@@ -98,17 +99,19 @@
         <label for="email">E-mail aanvrager (voor bevestiging)</label>
         <input id="email" name="gebruiker_email" type="email" placeholder="naam@club.be" />
 
-        <input type="hidden" name="valideerder_email" value="secretaris@filou-oostende.be" />
+        <!-- Vaste ontvanger validator (moet gelijk zijn aan Config → MAIL_VALIDEERDER) -->
+        <input type="hidden" name="valideerder_email" value="johan.dedrie@gmail.com" />
 
-        <div class="actions">
-          <button class="btn" type="submit">Verstuur (opent bevestiging)</button>
+        <div class="actions">	
+          <button class="btn" type="submit">Verstuur</button>
+          <a class="btn" href="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec?action=diag">Staff (beveiligd)</a>
         </div>
-        <p class="muted" style="margin-top:8px">Het centraal archief is alleen toegankelijk voor valideerder/betaler.</p>
+        <p class="muted" style="margin-top:8px">Het centrale archief & export zijn enkel voor validator/betaler via de beveiligde staff-pagina.</p>
       </form>
 
       <div style="margin-top:26px">
         <h2>Archief (lokaal op dit toestel)</h2>
-        <p class="muted">Hier zie je je eigen laatste aanvragen die vanaf dit toestel verstuurd zijn.</p>
+        <p class="muted">Je laatste aanvragen vanaf dit toestel (niet het centrale archief).</p>
         <table aria-label="Lokaal archief">
           <thead>
             <tr><th>Ingediend</th><th>Bestemming</th><th>Ploeg</th><th>Reden</th><th>Coach</th><th>Afstand</th></tr>
@@ -120,6 +123,7 @@
   </div>
 
   <script>
+    // Voorvul datum met vandaag
     (function(){
       const d = new Date();
       const yyyy = d.getFullYear();
@@ -128,6 +132,7 @@
       document.getElementById('datum').value = `${yyyy}-${mm}-${dd}`;
     })();
 
+    // Lokaal archief
     const form = document.getElementById('ritForm');
     const KEY = "filou_archief";
     const archTbody = document.getElementById('archiefBody');
@@ -141,7 +146,7 @@
           <td>${r.ploeg}</td>
           <td>${r.reden}</td>
           <td>${r.coach_naam}</td>
-          <td>${Number(r.afstand_km).toFixed(1)} km</td>
+          <td style="text-align:right">${Number(r.afstand_km).toFixed(2)} km</td>
         </tr>
       `).join("");
     }
@@ -153,10 +158,13 @@
     }
     loadArchief();
 
+    // Normaliseer komma naar punt vóór verzenden (server kan beide, dit helpt browsers)
     form.addEventListener('submit', () => {
+      const kmVal = form.afstand_km.value.replace(',', '.');
+      form.afstand_km.value = kmVal;
       const payload = {
         rit_datum: form.rit_datum.value,
-        afstand_km: form.afstand_km.value,
+        afstand_km: kmVal,
         bestemming: form.bestemming.value,
         ploeg: form.ploeg.value,
         reden: form.reden.value,
