--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
 
       <!-- VERVANG hieronder met je Public /exec URL indien anders -->
-      <form id="ritForm" method="post" action="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec" aria-label="Formulier kilometervergoeding">
+      <form id="ritForm" method="post" action="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec?action=senddigest&key=J" aria-label="Formulier kilometervergoeding">
         <label for="datum">Datum verplaatsing</label>
         <input id="datum" name="rit_datum" type="date" required />
 
@@ -152,7 +152,7 @@
         <div class="actions">
           <button class="btn" type="submit">Verstuur</button>
           <!-- (Optioneel) vervang PUBLIC door je aparte STAFF /exec -->
-          <a class="btn" href="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec?action=diag">Staff (beveiligd)</a>
+          <a class="btn" href="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec?action=diag&key=0000-0000">Staff (beveiligd)</a>
         </div>
         <p class="muted" style="margin-top:8px">Het centrale archief & export zijn enkel voor validator/betaler via de beveiligde staff-pagina.</p>
       </form>
