--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
 
       <!-- VERVANG hieronder met je Public /exec URL indien anders -->
-      <form id="ritForm" method="post" action="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec?action=senddigest&key=J" aria-label="Formulier kilometervergoeding">
+      <form id="ritForm" method="post" action="https://script.google.com/macros/s/AKfycbxah60lvasFXONql81_fpJD2cP-Wowu5DL2h5lozIGbnBso_kB6OTE0vcVFnFZp0zK-/exec?action=senddigest&key=0000-0000J" aria-label="Formulier kilometervergoeding">
         <label for="datum">Datum verplaatsing</label>
         <input id="datum" name="rit_datum" type="date" required />
 
@@ -147,12 +147,12 @@
         </div>
 
         <!-- Vaste ontvanger validator -->
-        <input type="hidden" name="valideerder_email" value="johan.dedrie@gmail.com" />
+        <input type="hidden" name="valideerder_email" value="secretaris@filou-oostende.be" />
 
         <div class="actions">
           <button class="btn" type="submit">Verstuur</button>
           <!-- (Optioneel) vervang PUBLIC door je aparte STAFF /exec -->
-          <a class="btn" href="https://script.google.com/macros/s/AKfycbz8LRjN040D0iC7Kqm6Zkly8Hg5FKbrG9vDmKTwqds/exec?action=diag&key=0000-0000">Staff (beveiligd)</a>
+          <a class="btn" href="https://script.google.com/macros/s/AKfycbxU_Dj3zRsZyqnvbbWl8zVH6GAzvuxiiExcqjJOqzlIv5mWxBk34vAXvWXBg-1LslpT/exec?action=diag&key=0000-0000">Staff (beveiligd)</a>
         </div>
         <p class="muted" style="margin-top:8px">Het centrale archief & export zijn enkel voor validator/betaler via de beveiligde staff-pagina.</p>
       </form>
